chore: keep dto fields required
