# shared-schemas/openapi.json
@@ -88,6 +88,10 @@
         "schemas": {
             "api.SyncResponse": {
                 "type": "object",
+                "required": [
+                    "changes",
+                    "server_time"
+                ],
                 "properties": {
                     "changes": {
                         "type": "array",
@@ -105,6 +109,7 @@
                 "required": [
                     "amount_ml",
                     "id",
+                    "is_deleted",
                     "logged_at"
                 ],
                 "properties": {
